--- a/safelink1.html
+++ b/safelink1.html
@@ -17,6 +17,7 @@ body {
   justify-content: center;
   gap: 20px;
   margin-top: 30px;
+  flex-wrap: wrap;
 }
 .timer-btn {
   background: #1b1f3a;
@@ -59,7 +60,6 @@ body {
 
 <div class="overlay" id="adOverlay">
   <h3>Iklan Sponsor</h3>
-  <!-- Banner 300x250 -->
   <script type="text/javascript">
     atOptions = {
       'key' : 'fe0c4ae1791e506f7b1558972b878705',
@@ -70,20 +70,13 @@ body {
     };
   </script>
   <script type="text/javascript" src="//www.highperformanceformat.com/fe0c4ae1791e506f7b1558972b878705/invoke.js"></script>
-
-  <!-- Social bar -->
   <script type='text/javascript' src='//pl28014407.effectivegatecpm.com/52/62/5a/52625a84e5cc480ed8f5abfb3b53e58a.js'></script>
-
-  <!-- Native banner -->
-  <script async="async" data-cfasync="false" src="//pl28014399.effectivegatecpm.com/d766b94dacbdcb1a47c99b9f9bdd27a8/invoke.js"></script>
-  <div id="container-d766b94dacbdcb1a47c99b9f9bdd27a8"></div>
-
   <button onclick="closeAd()">Tutup Iklan</button>
 </div>
 
 <script>
 const times = [10, 12, 15];
-const correctIndex = Math.floor(Math.random() * 3);
+const correctIndex = Math.floor(Math.random() * times.length);
 const timersDiv = document.getElementById("timers");
 const encoded = location.hash.split('=')[1];
 const smartLink = "https://www.effectivegatecpm.com/dsb6nckr?key=0b69c9d0a8b1cf8e8083fda807b5ad27";
