--- a/safelink2.html
+++ b/safelink2.html
@@ -17,6 +17,7 @@ body {
   justify-content: center;
   gap: 20px;
   margin-top: 30px;
+  flex-wrap: wrap;
 }
 .timer-btn {
   background: #2b1940;
@@ -56,7 +57,6 @@ body {
 
 <div class="overlay" id="adOverlay">
   <h3>Iklan Sponsor</h3>
-  <!-- Banner -->
   <script type="text/javascript">
     atOptions = {
       'key' : 'fe0c4ae1791e506f7b1558972b878705',
@@ -73,11 +73,11 @@ body {
 
 <script>
 const times = [10, 12, 15];
-const correctIndex = Math.floor(Math.random() * 3);
+const correctIndex = Math.floor(Math.random() * times.length);
 const timersDiv = document.getElementById("timers");
 const encoded = location.hash.split('=')[1];
-const smartLink = "https://www.effectivegatecpm.com/dsb6nckr?key=0b69c9d0a8b1cf8e8083fda807b5ad27";
 const decodedURL = atob(encoded || "");
+const smartLink = "https://www.effectivegatecpm.com/dsb6nckr?key=0b69c9d0a8b1cf8e8083fda807b5ad27";
 
 times.forEach((time, i) => {
   const btn = document.createElement("button");
