--- a/player.html
+++ b/player.html
@@ -13,52 +13,86 @@ html, body {
   width: 100%;
   height: 100%;
   background: #000;
+  font-family: Arial, sans-serif;
+}
+#video-player {
+  width: 100%;
+  height: 100%;
+}
+.plyr__control {
+  cursor: pointer;
 }
 </style>
 </head>
 <body>
-<video id="video-player" playsinline></video>
+
+<video id="video-player" playsinline controls></video>
+
 <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
 <script>
 const urlParams = new URLSearchParams(window.location.search);
 const videoSource = urlParams.get('s');
 const subSource = urlParams.get('sub');
 const SMARTLINK = "https://www.effectivegatecpm.com/dsb6nckr?key=0b69c9d0a8b1cf8e8083fda807b5ad27";
-const playerElement = document.getElementById('video-player');
 
 if (!videoSource) {
   alert('Video tidak ditemukan!');
 } else {
+  const video = document.getElementById('video-player');
+
+  // Tambahkan source video
   const src = document.createElement('source');
   src.src = videoSource;
   src.type = 'video/mp4';
-  playerElement.appendChild(src);
+  video.appendChild(src);
+
+  // Tambahkan subtitle jika ada
+  if (subSource) {
+    const track = document.createElement('track');
+    track.kind = 'subtitles';
+    track.src = subSource;
+    track.srclang = 'id';
+    track.label = 'Bahasa Indonesia';
+    track.default = true;
+    video.appendChild(track);
+  }
+
+  // Inisialisasi player tanpa tombol download default
+  const player = new Plyr(video, {
+    controls: [
+      'play-large','play','rewind','fast-forward',
+      'progress','current-time','duration',
+      'captions','settings','fullscreen'
+    ],
+    settings: ['speed','captions'],
+    speed: { selected: 1, options: [0.5,1,1.5,2,3] },
+  });
+
+  // Buat tombol custom Download via Safelink
+  const customBtn = document.createElement('button');
+  customBtn.className = 'plyr__controls__item plyr__control';
+  customBtn.innerHTML = '⬇️';
+  customBtn.title = 'Download via Safelink';
+  customBtn.style.marginLeft = '8px';
+  customBtn.onclick = () => {
+    const encoded = btoa(videoSource);
+    window.open(`safelink1.html#dl=${encoded}`, '_blank');
+  };
+
+  // Tunggu player siap lalu tambahkan tombol custom
+  player.on('ready', () => {
+    const controls = player.elements.controls?.querySelector('.plyr__controls');
+    if (controls) controls.appendChild(customBtn);
+  });
+
+  // Event interaksi utama membuka smartlink
+  ['play','ratechange'].forEach(evt => {
+    player.on(evt, () => {
+      window.open(SMARTLINK, '_blank');
+    });
+  });
 }
-
-if (subSource) {
-  const track = document.createElement('track');
-  track.kind = 'subtitles';
-  track.src = subSource;
-  track.srclang = 'id';
-  track.label = 'Bahasa Indonesia';
-  track.default = true;
-  playerElement.appendChild(track);
-}
-
-const player = new Plyr('#video-player', {
-  controls: ['play','rewind','fast-forward','progress','current-time','duration','captions','settings','download','fullscreen'],
-  settings: ['speed','captions'],
-  speed: { selected: 1, options: [0.5,1,1.5,2,3] },
-});
-
-player.download = () => {
-  const encoded = btoa(videoSource);
-  const url = `safelink1.html#dl=${encoded}`;
-  window.open(url, '_blank');
-};
-
-player.on('ratechange', () => window.open(SMARTLINK, '_blank'));
-player.on('play', () => window.open(SMARTLINK, '_blank'));
 </script>
+
 </body>
 </html>
