--- a/safelink2.html
+++ b/safelink2.html
@@ -5,71 +5,498 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Safelink 2 - Download File</title>
 <style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background: #1a1123;
+  background: linear-gradient(135deg, #1a0a2e 0%, #16213e 50%, #0f3460 100%);
   color: #fff;
   font-family: "Poppins", sans-serif;
-  text-align: center;
-  padding: 50px 10px;
+  min-height: 100vh;
+  padding: 20px 10px;
 }
-.timer-container {
+
+.content-wrapper {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+/* Ad Container with Countdown */
+.ad-container {
+  background: rgba(22, 33, 62, 0.8);
+  backdrop-filter: blur(10px);
+  padding: 20px;
+  margin: 25px 0;
+  border-radius: 16px;
+  border: 2px solid rgba(168, 85, 247, 0.4);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+  position: relative;
+}
+
+.ad-label {
+  color: #c4b5fd;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 12px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.ad-label::before {
+  content: "💎";
+  font-size: 16px;
+}
+
+.ad-content {
   display: flex;
   justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-  flex-wrap: wrap;
-}
-.timer-btn {
-  background: #2b1940;
-  border: 2px solid #b388ff;
-  color: #fff;
-  padding: 20px;
+  align-items: center;
+  min-height: 250px;
+  background: rgba(15, 52, 96, 0.5);
   border-radius: 12px;
-  cursor: pointer;
-  width: 120px;
-  transition: all .3s;
+  padding: 15px;
 }
-.timer-btn:hover { transform: scale(1.05); }
+
+.countdown-timer {
+  margin-top: 15px;
+  padding: 12px 20px;
+  background: linear-gradient(135deg, #a855f7 0%, #ec4899 100%);
+  border-radius: 8px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  box-shadow: 0 4px 15px rgba(168, 85, 247, 0.5);
+}
+
+.countdown-timer.completed {
+  background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+  animation: pulseGreen 1.5s infinite;
+}
+
+@keyframes pulseGreen {
+  0%, 100% { box-shadow: 0 4px 15px rgba(16, 185, 129, 0.5); }
+  50% { box-shadow: 0 4px 25px rgba(16, 185, 129, 0.8); }
+}
+
+.countdown-timer .icon {
+  font-size: 20px;
+}
+
+/* Header Section */
+.header-section {
+  text-align: center;
+  margin: 30px 0;
+  padding: 30px 20px;
+  background: rgba(22, 33, 62, 0.7);
+  border-radius: 16px;
+  border: 2px solid rgba(236, 72, 153, 0.3);
+}
+
+.header-section h1 {
+  font-size: 32px;
+  background: linear-gradient(135deg, #a855f7 0%, #ec4899 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+
+.header-section .subtitle {
+  color: #cbd5e1;
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+/* Warning Box */
+.warning-box {
+  background: linear-gradient(135deg, rgba(239, 68, 68, 0.3) 0%, rgba(220, 38, 38, 0.3) 100%);
+  padding: 25px;
+  border-radius: 16px;
+  margin: 25px 0;
+  border-left: 5px solid #ef4444;
+  backdrop-filter: blur(10px);
+  animation: warningPulse 2s infinite;
+}
+
+@keyframes warningPulse {
+  0%, 100% { box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7); }
+  50% { box-shadow: 0 0 0 15px rgba(239, 68, 68, 0); }
+}
+
+.warning-box h3 {
+  color: #fca5a5;
+  margin-bottom: 12px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.warning-box p {
+  color: #fecaca;
+  line-height: 1.8;
+  font-size: 15px;
+}
+
+/* Instruction Box */
+.instruction-box {
+  background: linear-gradient(135deg, rgba(168, 85, 247, 0.2) 0%, rgba(236, 72, 153, 0.2) 100%);
+  padding: 25px;
+  border-radius: 16px;
+  margin: 25px 0;
+  border-left: 5px solid #a855f7;
+  backdrop-filter: blur(10px);
+}
+
+.instruction-box h3 {
+  color: #e9d5ff;
+  margin-bottom: 12px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.instruction-box ul {
+  color: #ddd6fe;
+  line-height: 2;
+  font-size: 15px;
+  list-style-position: inside;
+}
+
+/* Timer Buttons Container */
+.timer-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  gap: 20px;
+  margin: 40px 0;
+  padding: 30px 20px;
+  background: rgba(22, 33, 62, 0.7);
+  border-radius: 16px;
+}
+
+.timer-btn {
+  background: linear-gradient(135deg, #7c3aed 0%, #a855f7 100%);
+  border: 2px solid #c084fc;
+  color: #fff;
+  padding: 25px 15px;
+  border-radius: 16px;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 20px rgba(124, 58, 237, 0.4);
+  position: relative;
+  overflow: hidden;
+}
+
+.timer-btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  transition: left 0.5s;
+}
+
+.timer-btn:hover::before {
+  left: 100%;
+}
+
+.timer-btn:hover {
+  transform: translateY(-5px) scale(1.05);
+  box-shadow: 0 8px 30px rgba(124, 58, 237, 0.6);
+  border-color: #e9d5ff;
+}
+
+.timer-btn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.timer-btn.active {
+  background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+  border-color: #34d399;
+  animation: downloadPulse 2s infinite;
+}
+
+@keyframes downloadPulse {
+  0%, 100% { 
+    box-shadow: 0 4px 20px rgba(16, 185, 129, 0.5);
+  }
+  50% { 
+    box-shadow: 0 8px 40px rgba(16, 185, 129, 0.8);
+  }
+}
+
+/* Download Progress */
+.download-progress {
+  display: none;
+  background: rgba(22, 33, 62, 0.9);
+  padding: 30px;
+  margin: 30px 0;
+  border-radius: 16px;
+  border: 2px solid rgba(16, 185, 129, 0.5);
+}
+
+.download-progress h3 {
+  color: #6ee7b7;
+  margin-bottom: 20px;
+  font-size: 22px;
+  text-align: center;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 35px;
+  background: rgba(15, 52, 96, 0.8);
+  border-radius: 17px;
+  overflow: hidden;
+  margin: 20px 0;
+  border: 2px solid rgba(16, 185, 129, 0.3);
+}
+
+.progress-fill {
+  height: 100%;
+  background: linear-gradient(90deg, #10b981 0%, #059669 50%, #10b981 100%);
+  background-size: 200% 100%;
+  width: 0%;
+  transition: width 0.5s;
+  animation: shimmer 2s infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: bold;
+}
+
+@keyframes shimmer {
+  0% { background-position: 200% 0; }
+  100% { background-position: -200% 0; }
+}
+
+#progressText {
+  text-align: center;
+  color: #6ee7b7;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* Overlay */
 .overlay {
   display: none;
   position: fixed;
-  top:0; left:0; right:0; bottom:0;
-  background: rgba(0,0,0,0.9);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.95);
   z-index: 9999;
-  text-align: center;
-  padding-top: 50px;
+  overflow-y: auto;
+  backdrop-filter: blur(10px);
 }
+
+.overlay-content {
+  max-width: 600px;
+  margin: 50px auto;
+  padding: 40px 20px;
+  text-align: center;
+}
+
+.overlay-content h3 {
+  font-size: 28px;
+  margin-bottom: 20px;
+  background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .overlay button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background: #ff0055;
+  margin-top: 30px;
+  padding: 15px 40px;
+  background: linear-gradient(135deg, #ec4899 0%, #8b5cf6 100%);
   border: none;
   color: #fff;
-  border-radius: 8px;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  transition: all 0.3s;
+  box-shadow: 0 4px 20px rgba(236, 72, 153, 0.4);
+}
+
+.overlay button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 30px rgba(236, 72, 153, 0.6);
+}
+
+.overlay button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .timer-container {
+    grid-template-columns: 1fr;
+  }
+  
+  .header-section h1 {
+    font-size: 24px;
+  }
+}
+
+/* Loading Spinner */
+.loading {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 3px solid rgba(255,255,255,0.3);
+  border-radius: 50%;
+  border-top-color: #fff;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
 }
 </style>
 </head>
 <body>
-<h2>🔒 Final Step: Download File</h2>
-<p>Pilih salah satu tombol untuk memulai timer. Jika kamu benar, file akan langsung terunduh.</p>
 
-<div class="timer-container" id="timers"></div>
+<div class="content-wrapper">
+  <!-- Header Section -->
+  <div class="header-section">
+    <h1>🔐 Final Step: Download File</h1>
+    <p class="subtitle">Langkah terakhir! Pastikan Anda memilih dengan benar</p>
+  </div>
 
-<div class="overlay" id="adOverlay">
-  <h3>Iklan Sponsor</h3>
-  <script type="text/javascript">
-    atOptions = {
-      'key' : 'fe0c4ae1791e506f7b1558972b878705',
-      'format' : 'iframe',
-      'height' : 250,
-      'width' : 300,
-      'params' : {}
-    };
-  </script>
-  <script type="text/javascript" src="//www.highperformanceformat.com/fe0c4ae1791e506f7b1558972b878705/invoke.js"></script>
-  <script type='text/javascript' src='//pl28014407.effectivegatecpm.com/52/62/5a/52625a84e5cc480ed8f5abfb3b53e58a.js'></script>
-  <button onclick="closeAd()">Tutup Iklan</button>
+  <!-- Warning Box -->
+  <div class="warning-box">
+    <h3>⚠️ PERHATIAN PENTING!</h3>
+    <p>Ini adalah langkah terakhir untuk mendapatkan file Anda. Mohon berhati-hati dalam memilih tombol yang benar!</p>
+  </div>
+
+  <!-- Ad Container 1: Banner 300x250 -->
+  <div class="ad-container" id="adContainer1">
+    <div class="ad-label">Premium Advertisement</div>
+    <div class="ad-content">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'fe0c4ae1791e506f7b1558972b878705',
+          'format' : 'iframe',
+          'height' : 250,
+          'width' : 300,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/fe0c4ae1791e506f7b1558972b878705/invoke.js"></script>
+    </div>
+    <div class="countdown-timer" id="countdown1">
+      <span class="icon">⏱️</span>
+      <span>Tunggu <strong id="timer1">15</strong> detik</span>
+    </div>
+  </div>
+
+  <!-- Instruction Box -->
+  <div class="instruction-box">
+    <h3>📋 Instruksi Download:</h3>
+    <ul>
+      <li>Tunggu hingga semua countdown iklan selesai</li>
+      <li>Pilih salah satu tombol yang muncul di bawah</li>
+      <li>Hanya SATU tombol yang benar untuk download</li>
+      <li>File akan otomatis terunduh jika benar</li>
+    </ul>
+  </div>
+
+  <!-- Ad Container 2: Native Banner 4:1 -->
+  <div class="ad-container" id="adContainer2">
+    <div class="ad-label">Featured Partner</div>
+    <div class="ad-content">
+      <script async="async" data-cfasync="false" src="//pl28014399.effectivegatecpm.com/d766b94dacbdcb1a47c99b9f9bdd27a8/invoke.js"></script>
+      <div id="container-d766b94dacbdcb1a47c99b9f9bdd27a8"></div>
+    </div>
+    <div class="countdown-timer" id="countdown2">
+      <span class="icon">⏱️</span>
+      <span>Tunggu <strong id="timer2">10</strong> detik</span>
+    </div>
+  </div>
+
+  <!-- Timer Buttons -->
+  <div class="timer-container" id="timers"></div>
+
+  <!-- Download Progress -->
+  <div class="download-progress" id="downloadProgress">
+    <h3>⬇️ Memulai Download...</h3>
+    <div class="progress-bar">
+      <div class="progress-fill" id="progressFill"></div>
+    </div>
+    <p id="progressText">Mempersiapkan file...</p>
+  </div>
+
+  <!-- Ad Container 3: Banner 300x250 -->
+  <div class="ad-container" id="adContainer3">
+    <div class="ad-label">Special Offer</div>
+    <div class="ad-content">
+      <script type="text/javascript">
+        atOptions = {
+          'key' : 'fe0c4ae1791e506f7b1558972b878705',
+          'format' : 'iframe',
+          'height' : 250,
+          'width' : 300,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/fe0c4ae1791e506f7b1558972b878705/invoke.js"></script>
+    </div>
+    <div class="countdown-timer" id="countdown3">
+      <span class="icon">⏱️</span>
+      <span>Tunggu <strong id="timer3">12</strong> detik</span>
+    </div>
+  </div>
 </div>
+
+<!-- Overlay Popup -->
+<div class="overlay" id="adOverlay">
+  <div class="overlay-content">
+    <h3>🎯 Iklan Sponsor</h3>
+    <p style="color: #cbd5e1; margin-bottom: 20px;">Ups! Tombol yang salah. Lihat iklan ini dulu ya</p>
+    
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'fe0c4ae1791e506f7b1558972b878705',
+        'format' : 'iframe',
+        'height' : 250,
+        'width' : 300,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/fe0c4ae1791e506f7b1558972b878705/invoke.js"></script>
+    
+    <button id="closeOverlayBtn" disabled>
+      <span class="loading"></span> Tunggu <span id="overlayTimer">5</span> detik
+    </button>
+  </div>
+</div>
+
+<!-- Social Bar -->
+<script type='text/javascript' src='//pl28014407.effectivegatecpm.com/52/62/5a/52625a84e5cc480ed8f5abfb3b53e58a.js'></script>
+
+<!-- Popunder -->
+<script type='text/javascript' src='//pl28014410.effectivegatecpm.com/77/6b/17/776b17db92afc5094913dfbdb3d9d036.js'></script>
 
 <script>
 const times = [10, 12, 15];
@@ -79,30 +506,95 @@ const encoded = location.hash.split('=')[1];
 const decodedURL = atob(encoded || "");
 const smartLink = "https://www.effectivegatecpm.com/dsb6nckr?key=0b69c9d0a8b1cf8e8083fda807b5ad27";
 
-times.forEach((time, i) => {
-  const btn = document.createElement("button");
-  btn.className = "timer-btn";
-  btn.textContent = `${time} detik`;
-  btn.onclick = () => startTimer(btn, time, i);
-  timersDiv.appendChild(btn);
-});
+let allAdsViewed = false;
+let ad1Done = false;
+let ad2Done = false;
+let ad3Done = false;
+
+// Countdown untuk Ad 1
+let countdown1 = 15;
+const timer1Interval = setInterval(() => {
+  countdown1--;
+  document.getElementById('timer1').textContent = countdown1;
+  if (countdown1 <= 0) {
+    clearInterval(timer1Interval);
+    document.getElementById('countdown1').innerHTML = '<span class="icon">✅</span><span>Selesai!</span>';
+    document.getElementById('countdown1').classList.add('completed');
+    ad1Done = true;
+    checkAllAds();
+  }
+}, 1000);
+
+// Countdown untuk Ad 2
+let countdown2 = 10;
+const timer2Interval = setInterval(() => {
+  countdown2--;
+  document.getElementById('timer2').textContent = countdown2;
+  if (countdown2 <= 0) {
+    clearInterval(timer2Interval);
+    document.getElementById('countdown2').innerHTML = '<span class="icon">✅</span><span>Selesai!</span>';
+    document.getElementById('countdown2').classList.add('completed');
+    ad2Done = true;
+    checkAllAds();
+  }
+}, 1000);
+
+// Countdown untuk Ad 3
+let countdown3 = 12;
+const timer3Interval = setInterval(() => {
+  countdown3--;
+  document.getElementById('timer3').textContent = countdown3;
+  if (countdown3 <= 0) {
+    clearInterval(timer3Interval);
+    document.getElementById('countdown3').innerHTML = '<span class="icon">✅</span><span>Selesai!</span>';
+    document.getElementById('countdown3').classList.add('completed');
+    ad3Done = true;
+    checkAllAds();
+  }
+}, 1000);
+
+// Check jika semua iklan sudah selesai
+function checkAllAds() {
+  if (ad1Done && ad2Done && ad3Done && !allAdsViewed) {
+    allAdsViewed = true;
+    enableTimerButtons();
+  }
+}
+
+// Enable tombol timer setelah semua iklan selesai
+function enableTimerButtons() {
+  times.forEach((time, i) => {
+    const btn = document.createElement("button");
+    btn.className = "timer-btn";
+    btn.textContent = `${time} detik`;
+    btn.onclick = () => startTimer(btn, time, i);
+    timersDiv.appendChild(btn);
+  });
+}
 
 function startTimer(btn, time, i) {
   if (btn.disabled) return;
-  btn.disabled = true;
+  
+  // Disable semua tombol
+  document.querySelectorAll('.timer-btn').forEach(b => b.disabled = true);
+  
   let remaining = time;
   const interval = setInterval(() => {
     remaining--;
     btn.textContent = `${remaining}s`;
     if (remaining <= 0) {
       clearInterval(interval);
-      btn.textContent = "Download";
+      btn.textContent = "DOWNLOAD";
       btn.disabled = false;
+      btn.classList.add('active');
       btn.onclick = () => {
         if (i === correctIndex) {
-          window.location.href = decodedURL;
+          showDownloadProgress();
+          setTimeout(() => {
+            window.location.href = decodedURL;
+          }, 3500);
         } else {
-          showAd();
+          showOverlay();
           window.open(smartLink, "_blank");
         }
       };
@@ -110,12 +602,52 @@ function startTimer(btn, time, i) {
   }, 1000);
 }
 
-function showAd() {
+function showDownloadProgress() {
+  document.getElementById('downloadProgress').style.display = 'block';
+  document.getElementById('downloadProgress').scrollIntoView({ behavior: 'smooth' });
+  
+  let progress = 0;
+  const progressInterval = setInterval(() => {
+    progress += 30;
+    if (progress > 100) progress = 100;
+    document.getElementById('progressFill').style.width = progress + '%';
+    document.getElementById('progressFill').textContent = progress + '%';
+    document.getElementById('progressText').textContent = progress < 100 ? `Downloading... ${progress}%` : 'Download akan segera dimulai...';
+    if (progress >= 100) {
+      clearInterval(progressInterval);
+    }
+  }, 1000);
+}
+
+function showOverlay() {
   document.getElementById("adOverlay").style.display = "block";
+  
+  let overlayTimer = 5;
+  const closeBtn = document.getElementById('closeOverlayBtn');
+  
+  const overlayInterval = setInterval(() => {
+    overlayTimer--;
+    document.getElementById('overlayTimer').textContent = overlayTimer;
+    if (overlayTimer <= 0) {
+      clearInterval(overlayInterval);
+      closeBtn.disabled = false;
+      closeBtn.innerHTML = '✅ Tutup & Coba Lagi';
+      closeBtn.style.background = 'linear-gradient(135deg, #10b981 0%, #059669 100%)';
+    }
+  }, 1000);
 }
-function closeAd() {
+
+function closeOverlay() {
   document.getElementById("adOverlay").style.display = "none";
+  // Re-enable semua tombol
+  document.querySelectorAll('.timer-btn').forEach(b => {
+    b.disabled = false;
+    b.classList.remove('active');
+  });
 }
+
+document.getElementById('closeOverlayBtn').onclick = closeOverlay;
 </script>
+
 </body>
 </html>
